# Triangulo-Gtest

./: CMakeLists.txt  README.md
.github/workflows/: autograding.yml
tests/: test_triangulo.cpp
